--- a/ChungHsinWebAPI/packages.config
+++ b/ChungHsinWebAPI/packages.config
@@ -18,6 +18,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="MySql.Data" version="8.0.23" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
+  <package id="Serilog" version="2.10.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net461" />
+  <package id="Serilog.Sinks.File" version="5.0.0" targetFramework="net461" />
   <package id="SSH.NET" version="2020.0.0" targetFramework="net461" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net461" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net461" />
